<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Input" Id="{4c9dfc78-dde0-47bb-a8fe-9d550e4bab0d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//***MCP************************************************************************
	//EL1008 - DI1
	R1_01_00 AT	%I*: BOOL; //Master stop PB not pressed - black pb on mcp
	R1_01_01 AT	%I*: BOOL; //case Estop circuit okay (Rly1 (120vac)
	R1_01_02 AT %I*: BOOL; //Remote Mode Selected (NO)
	R1_01_03 AT %I*: BOOL; //MCP PSU1 DC OK
	R1_01_04 AT %I*: BOOL; //Machine Ground Relay Open (lifted) Opto Board
	R1_01_05 AT %I*: BOOL; //spare
	R1_01_06 AT %I*: BOOL; //spare
	R1_01_07 AT %I*: BOOL; //spare

	//EL1008 - DI2
	//TDK802 1
	R1_02_00 AT	%I*: BOOL; //
	R1_02_01 AT	%I*: BOOL;
	R1_02_02 AT %I*: BOOL; 
	R1_02_03 AT %I*: BOOL; 
	R1_02_04 AT %I*: BOOL; 
	R1_02_05 AT %I*: BOOL; 
	R1_02_06 AT %I*: BOOL; 
	R1_02_07 AT %I*: BOOL; //spare
	
	//EL3068 - AI1
	R1_04_00 		AT %I*: INT;
	R1_04_00_Status AT %I*: WORD;
	
	R1_04_01 		AT %I*: INT;
	R1_04_01_Status AT %I*: WORD;

	R1_04_02 		AT %I*: INT;
	R1_04_02_Status AT %I*: WORD;

	R1_04_03 		AT %I*: INT;
	R1_04_03_Status AT %I*: WORD;

	R2_04_04 		AT %I*: INT;
	R2_04_04_Status AT %I*: WORD;

	R1_04_05 		AT %I*: INT;
	R1_04_05_Status AT %I*: WORD;

	R1_04_06 		AT %I*: INT;
	R1_04_06_Status AT %I*: WORD;

	R1_04_07 		AT %I*: INT;
	R1_04_07_Status AT %I*: WORD;

	
(*	//EL1008 - DI3
	//TDK802 2
	R1_03_00 AT	%I*: BOOL; 
	R1_03_01 AT	%I*: BOOL;
	R1_03_02 AT %I*: BOOL; 
	R1_03_03 AT %I*: BOOL; 
	R1_03_04 AT %I*: BOOL; 
	R1_03_05 AT %I*: BOOL; 
	R1_03_06 AT %I*: BOOL; 
	R1_03_07 AT %I*: BOOL; //spare
		
	//EL1008 - DI4
	//TDK802 3
	R1_04_00 AT	%I*: BOOL; 
	R1_04_01 AT	%I*: BOOL;
	R1_04_02 AT %I*: BOOL; 
	R1_04_03 AT %I*: BOOL; 
	R1_04_04 AT %I*: BOOL; 
	R1_04_05 AT %I*: BOOL; 
	R1_04_06 AT %I*: BOOL; 
	R1_04_07 AT %I*: BOOL; //spare
	
	//EL1008 - DI5
	//TDK802 4
	R1_05_00 AT	%I*: BOOL; 
	R1_05_01 AT	%I*: BOOL;
	R1_05_02 AT %I*: BOOL; 
	R1_05_03 AT %I*: BOOL; 
	R1_05_04 AT %I*: BOOL; 
	R1_05_05 AT %I*: BOOL; 
	R1_05_06 AT %I*: BOOL; 
	R1_05_07 AT %I*: BOOL; //spare
	
	//EL1008 - DI6
	//TDK802 5
	R1_06_00 AT	%I*: BOOL; 
	R1_06_01 AT	%I*: BOOL;
	R1_06_02 AT %I*: BOOL; 
	R1_06_03 AT %I*: BOOL; 
	R1_06_04 AT %I*: BOOL; 
	R1_06_05 AT %I*: BOOL; 
	R1_06_06 AT %I*: BOOL; 
	R1_06_07 AT %I*: BOOL; //spare
	
	//EL1008 - DI7
	//TDK802 6
	R1_07_00 AT	%I*: BOOL; 
	R1_07_01 AT	%I*: BOOL;
	R1_07_02 AT %I*: BOOL; 
	R1_07_03 AT %I*: BOOL; 
	R1_07_04 AT %I*: BOOL; 
	R1_07_05 AT %I*: BOOL; 
	R1_07_06 AT %I*: BOOL; 
	R1_07_07 AT %I*: BOOL; //spare
	
	//EL1008 - DI8
	//TDK802 7
	R1_08_00 AT	%I*: BOOL; 
	R1_08_01 AT	%I*: BOOL;
	R1_08_02 AT %I*: BOOL; 
	R1_08_03 AT %I*: BOOL; 
	R1_08_04 AT %I*: BOOL; 
	R1_08_05 AT %I*: BOOL; 
	R1_08_06 AT %I*: BOOL; 
	R1_08_07 AT %I*: BOOL; //spare
	
	//EL1008 - DI9
	//TDK802 8
	R1_09_00 AT	%I*: BOOL; 
	R1_09_01 AT	%I*: BOOL;
	R1_09_02 AT %I*: BOOL; 
	R1_09_03 AT %I*: BOOL; 
	R1_09_04 AT %I*: BOOL; 
	R1_09_05 AT %I*: BOOL; 
	R1_09_06 AT %I*: BOOL; 
	R1_09_07 AT %I*: BOOL; //spare

//RACK 2
	

	//EL3068 - AI2
	R2_04_00 		AT %I*: INT;
	R2_04_00_Status AT %I*: WORD;

	R2_04_01 		AT %I*: INT;
	R2_04_01_Status AT %I*: WORD;

	R2_04_02 		AT %I*: INT;
	R2_04_02_Status AT %I*: WORD;

	R2_04_03 		AT %I*: INT;
	R2_04_03_Status AT %I*: WORD;

	R2_04_04 		AT %I*: INT;
	R2_04_04_Status AT %I*: WORD;

	R2_04_05 		AT %I*: INT;
	R2_04_05_Status AT %I*: WORD;

	R2_04_06 		AT %I*: INT;
	R2_04_06_Status AT %I*: WORD;

	R2_04_07 		AT %I*: INT;
	R2_04_07_Status AT %I*: WORD;

//***LCP1***BANK1 (Rack 3)********************************************************************
//EL3068 - AI1
	R3_01_00 		AT %I*: INT;
	R3_01_00_Status AT %I*: WORD;
	
	R3_01_01		AT %I*: INT;
	R3_01_01_Status AT %I*: WORD;
	
	R3_01_02 		AT %I*: INT;
	R3_01_02_Status AT %I*: WORD;
	
	R3_01_03 		AT %I*: INT;
	R3_01_03_Status AT %I*: WORD;
	
	R3_01_04 		AT %I*: INT;
	R3_01_04_Status AT %I*: WORD;
	
	R3_01_05 		AT %I*: INT;
	R3_01_05_Status AT %I*: WORD;
	
	R3_01_06 		AT %I*: INT;
	R3_01_06_Status AT %I*: WORD;
	
	R3_01_07 		AT %I*: INT;
	R3_01_07_Status AT %I*: WORD;
	
	//EL3068 - AI2
	R3_02_00 		AT %I*: INT;
	R3_02_00_Status AT %I*: WORD;
	
	R3_02_01		AT %I*: INT;
	R3_02_01_Status AT %I*: WORD;
	
	R3_02_02 		AT %I*: INT;
	R3_02_02_Status AT %I*: WORD;
	
	R3_02_03 		AT %I*: INT;
	R3_02_03_Status AT %I*: WORD;
	
	R3_02_04 		AT %I*: INT; //SPARE
	R3_02_04_Status AT %I*: WORD;
	
	R3_02_05 		AT %I*: INT; //SPARE
	R3_02_05_Status AT %I*: WORD;
	
	R3_02_06 		AT %I*: INT; //SPARE
	R3_02_06_Status AT %I*: WORD;
	
	R3_02_07 		AT %I*: INT; //SPARE
	R3_02_07_Status AT %I*: WORD;

//EL1008 - DI1
	R3_03_00 AT %I*: BOOL;
	R3_03_01 AT %I*: BOOL;
	R3_03_02 AT %I*: BOOL;
	R3_03_03 AT %I*: BOOL;
	R3_03_04 AT %I*: BOOL;
	R3_03_05 AT %I*: BOOL;
	R3_03_06 AT %I*: BOOL;
	R3_03_07 AT %I*: BOOL;
//EL1008 - DI2	
	R3_04_00 AT %I*: BOOL;
	R3_04_01 AT %I*: BOOL;
	R3_04_02 AT %I*: BOOL;
	R3_04_03 AT %I*: BOOL;
	R3_04_04 AT %I*: BOOL;
	R3_04_05 AT %I*: BOOL; 
	R3_04_06 AT %I*: BOOL; //SPARE
	R3_04_07 AT %I*: BOOL; //SPARE

//***LCP2***BANK2 (Rack 4)********************************************************************
//EL3068 - AI1
	R4_01_00 		AT %I*: INT;
	R4_01_00_Status AT %I*: WORD;
	
	R4_01_01		AT %I*: INT;
	R4_01_01_Status AT %I*: WORD;
	
	R4_01_02 		AT %I*: INT;
	R4_01_02_Status AT %I*: WORD;
	
	R4_01_03 		AT %I*: INT;
	R4_01_03_Status AT %I*: WORD;
	
	R4_01_04 		AT %I*: INT;
	R4_01_04_Status AT %I*: WORD;
	
	R4_01_05 		AT %I*: INT;
	R4_01_05_Status AT %I*: WORD;
	
	R4_01_06 		AT %I*: INT;
	R4_01_06_Status AT %I*: WORD;
	
	R4_01_07 		AT %I*: INT;
	R4_01_07_Status AT %I*: WORD;
	
	//EL3068 - AI2
	R4_02_00 		AT %I*: INT;
	R4_02_00_Status AT %I*: WORD;
	
	R4_02_01		AT %I*: INT;
	R4_02_01_Status AT %I*: WORD;
	
	R4_02_02 		AT %I*: INT;
	R4_02_02_Status AT %I*: WORD;
	
	R4_02_03 		AT %I*: INT;
	R4_02_03_Status AT %I*: WORD;
	
	R4_02_04 		AT %I*: INT; //SPARE
	R4_02_04_Status AT %I*: WORD;
	
	R4_02_05 		AT %I*: INT; //SPARE
	R4_02_05_Status AT %I*: WORD;
	
	R4_02_06 		AT %I*: INT; //SPARE
	R4_02_06_Status AT %I*: WORD;
	
	R4_02_07 		AT %I*: INT; //SPARE
	R4_02_07_Status AT %I*: WORD;

//EL1008 - DI1
	R4_03_00 AT %I*: BOOL;
	R4_03_01 AT %I*: BOOL;
	R4_03_02 AT %I*: BOOL;
	R4_03_03 AT %I*: BOOL;
	R4_03_04 AT %I*: BOOL;
	R4_03_05 AT %I*: BOOL;
	R4_03_06 AT %I*: BOOL;
	R4_03_07 AT %I*: BOOL;
//EL1008 - DI2	
	R4_04_00 AT %I*: BOOL;
	R4_04_01 AT %I*: BOOL;
	R4_04_02 AT %I*: BOOL;
	R4_04_03 AT %I*: BOOL;
	R4_04_04 AT %I*: BOOL;
	R4_04_05 AT %I*: BOOL; 
	R4_04_06 AT %I*: BOOL; //SPARE
	R4_04_07 AT %I*: BOOL; //SPARE

//***LCP3***BANK3 (Rack 5)********************************************************************
//EL3068 - AI1
	R5_01_00 		AT %I*: INT;
	R5_01_00_Status AT %I*: WORD;
	
	R5_01_01		AT %I*: INT;
	R5_01_01_Status AT %I*: WORD;
	
	R5_01_02 		AT %I*: INT;
	R5_01_02_Status AT %I*: WORD;
	
	R5_01_03 		AT %I*: INT;
	R5_01_03_Status AT %I*: WORD;
	
	R5_01_04 		AT %I*: INT;
	R5_01_04_Status AT %I*: WORD;
	
	R5_01_05 		AT %I*: INT;
	R5_01_05_Status AT %I*: WORD;
	
	R5_01_06 		AT %I*: INT;
	R5_01_06_Status AT %I*: WORD;
	
	R5_01_07 		AT %I*: INT;
	R5_01_07_Status AT %I*: WORD;
	
	//EL3068 - AI2
	R5_02_00 		AT %I*: INT;
	R5_02_00_Status AT %I*: WORD;
	
	R5_02_01		AT %I*: INT;
	R5_02_01_Status AT %I*: WORD;
	
	R5_02_02 		AT %I*: INT;
	R5_02_02_Status AT %I*: WORD;
	
	R5_02_03 		AT %I*: INT;
	R5_02_03_Status AT %I*: WORD;
	
	R5_02_04 		AT %I*: INT; //SPARE
	R5_02_04_Status AT %I*: WORD;
	
	R5_02_05 		AT %I*: INT; //SPARE
	R5_02_05_Status AT %I*: WORD;
	
	R5_02_06 		AT %I*: INT; //SPARE
	R5_02_06_Status AT %I*: WORD;
	
	R5_02_07 		AT %I*: INT; //SPARE
	R5_02_07_Status AT %I*: WORD;

//EL1008 - DI1
	R5_03_00 AT %I*: BOOL;
	R5_03_01 AT %I*: BOOL;
	R5_03_02 AT %I*: BOOL;
	R5_03_03 AT %I*: BOOL;
	R5_03_04 AT %I*: BOOL;
	R5_03_05 AT %I*: BOOL;
	R5_03_06 AT %I*: BOOL;
	R5_03_07 AT %I*: BOOL;
//EL1008 - DI2	
	R5_04_00 AT %I*: BOOL;
	R5_04_01 AT %I*: BOOL;
	R5_04_02 AT %I*: BOOL;
	R5_04_03 AT %I*: BOOL;
	R5_04_04 AT %I*: BOOL;
	R5_04_05 AT %I*: BOOL; 
	R5_04_06 AT %I*: BOOL; //SPARE
	R5_04_07 AT %I*: BOOL; //SPARE

//***LCP4***BANK4 (Rack 6)****FORMATION****************************************************************
//EL3068 - AI1
	R6_01_00 		AT %I*: INT;
	R6_01_00_Status AT %I*: WORD;
	
	R6_01_01		AT %I*: INT;
	R6_01_01_Status AT %I*: WORD;
	
	R6_01_02 		AT %I*: INT;
	R6_01_02_Status AT %I*: WORD;
	
	R6_01_03 		AT %I*: INT;
	R6_01_03_Status AT %I*: WORD;
	
	R6_01_04 		AT %I*: INT;
	R6_01_04_Status AT %I*: WORD;
	
	R6_01_05 		AT %I*: INT;
	R6_01_05_Status AT %I*: WORD;
	
	R6_01_06 		AT %I*: INT;
	R6_01_06_Status AT %I*: WORD;
	
	R6_01_07 		AT %I*: INT;
	R6_01_07_Status AT %I*: WORD;
	
	//EL3068 - AI2
	R6_02_00 		AT %I*: INT;
	R6_02_00_Status AT %I*: WORD;
	
	R6_02_01		AT %I*: INT;
	R6_02_01_Status AT %I*: WORD;
	
	R6_02_02 		AT %I*: INT;
	R6_02_02_Status AT %I*: WORD;
	
	R6_02_03 		AT %I*: INT;
	R6_02_03_Status AT %I*: WORD;
	
	R6_02_04 		AT %I*: INT; 
	R6_02_04_Status AT %I*: WORD;
	
	R6_02_05 		AT %I*: INT; //SPARE
	R6_02_05_Status AT %I*: WORD;
	
	R6_02_06 		AT %I*: INT; //SPARE
	R6_02_06_Status AT %I*: WORD;
	
	R6_02_07 		AT %I*: INT; //SPARE
	R6_02_07_Status AT %I*: WORD;

//EL1008 - DI1
	R6_03_00 AT %I*: BOOL;
	R6_03_01 AT %I*: BOOL;
	R6_03_02 AT %I*: BOOL;
	R6_03_03 AT %I*: BOOL;
	R6_03_04 AT %I*: BOOL;
	R6_03_05 AT %I*: BOOL;
	R6_03_06 AT %I*: BOOL;
	R6_03_07 AT %I*: BOOL;
//EL1008 - DI2	
	R6_04_00 AT %I*: BOOL;
	R6_04_01 AT %I*: BOOL;
	R6_04_02 AT %I*: BOOL;
	R6_04_03 AT %I*: BOOL;
	R6_04_04 AT %I*: BOOL;
	R6_04_05 AT %I*: BOOL; 
	R6_04_06 AT %I*: BOOL; 
	R6_04_07 AT %I*: BOOL; 
//EL1008 - DI3	
	R6_05_00 AT %I*: BOOL;
	R6_05_01 AT %I*: BOOL;
	R6_05_02 AT %I*: BOOL;
	R6_05_03 AT %I*: BOOL;
	R6_05_04 AT %I*: BOOL; //spare
	R6_05_05 AT %I*: BOOL; //spare
	R6_05_06 AT %I*: BOOL; //spare
	R6_05_07 AT %I*: BOOL; //spare
//EL1008 - DI4	
	R6_06_00 AT %I*: BOOL;
	R6_06_01 AT %I*: BOOL;
	R6_06_02 AT %I*: BOOL;
	R6_06_03 AT %I*: BOOL;
	R6_06_04 AT %I*: BOOL; 
	R6_06_05 AT %I*: BOOL; 
	R6_06_06 AT %I*: BOOL; 
	R6_06_07 AT %I*: BOOL; 
//EL1008 - DI5	
	R6_07_00 AT %I*: BOOL;
	R6_07_01 AT %I*: BOOL;
	R6_07_02 AT %I*: BOOL;
	R6_07_03 AT %I*: BOOL; //spare
	R6_07_04 AT %I*: BOOL; //spare
	R6_07_05 AT %I*: BOOL; //spare
	R6_07_06 AT %I*: BOOL; //spare
	R6_07_07 AT %I*: BOOL; //spare
*)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>